<resources>
    <string name="app_name" translatable="false">Contas a Pagar</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register_hint">Do not have an account? Tap here to create one with a new email and password</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_text">Please sign in to continue</string>
    <string name="invalid_email_message">Please enter a valid email address</string>
    <string name="invalid_password_message">Must contain at least 6 characters</string>
    <string name="error">Error</string>
    <string name="sign_in_error">Failed to sign in: %s</string>
    <string name="sign_in_error_no_user">There is no user with this email address</string>
    <string name="sign_in_error_password">Email or password is incorrect</string>
    <string name="sign_in_error_unknown">Unknown error</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="connected">Connected</string>
    <string name="welcome_toast">Welcome, %s</string>
    <string name="check_input_fields">Please, check the input fields</string>
    <string name="register">Register</string>
    <string name="failure_format">Failed: %s</string>
    <string name="registration_complete">Registration complete, please sign in</string>
    <string name="expenses">Expenses</string>
    <string name="management">Management</string>
    <string name="earnings">Earnings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="listing">Listing</string>
    <string name="reports">Reports</string>
    <string name="add">Add</string>
    <string name="nothing_found">Nothing found. Use the button below to add.</string>
    <string name="new_expense">New expense</string>
    <string name="value">Value</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="paid">Paid</string>
    <string name="invalid_value">Invalid value</string>
    <string name="failed_to_save">Failed to save data</string>
    <string name="no_attachment">No attachments</string>
    <string name="attachments_format">%d attachments</string>
    <string name="value_format_list_item" translatable="false">%s   •  </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_prompt">Are you absolutely sure you want to delete this?</string>
    <string name="received">Received</string>
    <string name="done">Done</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="new_revenue">New revenue</string>
    <string name="attachments">Attachments</string>
    <string name="download">Download</string>
    <string name="download_completed">Download completed</string>
    <string name="upload_completed">Upload completed</string>
    <string name="error_file_too_big">Selected file is too large. Please select a file less than 10 MB in size.</string>
    <string name="total_expenses">Total expenses</string>
    <string name="average">Average</string>
    <string name="total_format">%d expenses</string>
    <string name="last_month_format">Last month: %s</string>
    <string name="total_paid">Total paid</string>
    <string name="total_to_be_paid">Total to be paid</string>
    <string name="total_balance">Balance</string>
    <string name="compared_last_month">Compared to last month</string>
    <string name="timeline">Timeline</string>
    <string name="biggest_format">Biggest: %s</string>
    <string name="smallest_format">Smallest: %s</string>
    <string name="total_revenue">Total revenue</string>
    <string name="sign_out">Sign out</string>
    <string name="next_month">Next month</string>

</resources>