<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                style="@style/TextAppearance.AppTheme.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text"
                android:gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>

            <ProgressBar
                android:id="@+id/loginProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmailContainer"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginEmail"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginPasswordContainer"
                android:hint="@string/password"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:imeActionLabel="@string/sign_in"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/sign_in"
                android:layout_marginTop="16dp"
                android:layout_gravity="end"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginRegisterCard"
        android:layout_margin="24dp"
        android:layout_gravity="bottom"
        app:layout_behavior="com.lennoardsilva.androidmobillschallenge.helpers.MoveUpwardBehavior">

        <TextView
            style="@style/SelectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginRegister"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/register_hint"
            android:padding="16dp"
            android:drawableStart="@drawable/ic_info"
            android:drawablePadding="24dp"/>

    </com.google.android.material.card.MaterialCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>