<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#06000000"
    android:animateLayoutChanges="true">

    <View
        android:layout_width="48dp"
        android:layout_height="6dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/sheet_drag_indicator"
        android:layout_marginTop="12dp"/>

    <TextView
        style="@style/SingleLineText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/modalBottomSheetTitle"
        android:gravity="center_vertical"
        android:text="@string/register"
        android:paddingTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSurface" />
    
    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerProgress"
        android:indeterminate="true" 
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerEmailContainer"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerPasswordContainer"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:imeActionLabel="@string/sign_in"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerCancel"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxWidth="140dp"
            android:maxLines="1"
            android:text="@android:string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxWidth="160dp"
            android:text="@android:string/ok"/>

    </LinearLayout>

</LinearLayout>
