<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#06000000"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="48dp"
            android:layout_height="6dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/sheet_drag_indicator"
            android:layout_marginTop="12dp"/>

        <TextView
            style="@style/SingleLineText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/expenseSheetTitle"
            android:gravity="center_vertical"
            android:text="@string/new_expense"
            android:paddingTop="12dp"
            android:fontFamily="@font/rubik_medium"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expenseSheetProgress"
            android:indeterminate="true"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/value">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/expenseSheetValue"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/expenseSheetTime"
                    android:inputType="datetime"
                    android:selectAllOnFocus="true"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expenseSheetDescription"
                android:inputType="textImeMultiLine"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expenseSheetPaid"
            android:text="@string/paid"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/expenseSheetCancel"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxWidth="140dp"
                android:maxLines="1"
                android:text="@android:string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expenseSheetDone"
                android:text="@android:string/ok"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
